Translate "Look" Verbs Responses
Start to translate verb responses for the "look" verbs.
Update the test file for look verbs.

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.0-Alpha,</span>
-<span id="revdate">2018-10-15</span>
+<span id="revnumber">versione 0.7.1-Alpha,</span>
+<span id="revdate">2018-10-17</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -545,6 +545,13 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN esaminare.                ---&gt; examine      (+ check, inspect, observe, x)
   CAN giocare_con.              ---&gt; play_with
   CAN gridare.                  ---&gt; shout        (+ scream, yell)
+  CAN guardare.                 ---&gt; look         (+ gaze, peek)
+  CAN guardare_attraverso.      ---&gt; look_through
+  CAN guardare_dietro.          ---&gt; look_behind
+  CAN guardare_fuori_da.        ---&gt; look_out_of
+  CAN guardare_in.              ---&gt; look_in
+  CAN guardare_sotto.           ---&gt; look_under
+  CAN guardare_su.              ---&gt; look_up
   CAN guidare.                  ---&gt; drive
   CAN indossare.                ---&gt; wear
   CAN inventariare.             ---&gt; i            (+ inv, inventory)
@@ -718,14 +725,7 @@ italiano del modulo delle definizioni.</p>
   CAN lie_on.
   CAN lift.
 --CAN light. ---------------------&gt; ** VERBO ELIMINATO ** (+ lit)
-  CAN 'look'.      -- (+ gaze, peek)
-  CAN look_at.
-  CAN look_behind.
-  CAN look_in.
-  CAN look_out_of.
-  CAN look_through.
-  CAN look_under.
-  CAN look_up.
+--CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
   CAN 'notify'.
   CAN notify_on.
   CAN notify_off.
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.0-Alpha<br>
-Ultimo aggiornamento 2018-10-15 19:30:48 ora legale Europa occidentale
+Versione 0.7.1-Alpha<br>
+Ultimo aggiornamento 2018-10-18 11:56:07 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
