--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.1-Alpha,</span>
-<span id="revdate">2018-10-17</span>
+<span id="revnumber">versione 0.7.2-Alpha,</span>
+<span id="revdate">2018-10-19</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -544,6 +544,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN entrare.                  ---&gt; enter
   CAN esaminare.                ---&gt; examine      (+ check, inspect, observe, x)
   CAN giocare_con.              ---&gt; play_with
+  CAN grattare.                 ---&gt; scratch
   CAN gridare.                  ---&gt; shout        (+ scream, yell)
   CAN guardare.                 ---&gt; look         (+ gaze, peek)
   CAN guardare_attraverso.      ---&gt; look_through
@@ -741,7 +742,6 @@ italiano del modulo delle definizioni.</p>
   CAN put_under.
   CAN rub.
   CAN 'score'.
-  CAN scratch.
   CAN 'script'.
   CAN script_on.
   CAN script_off.
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.1-Alpha<br>
-Ultimo aggiornamento 2018-10-18 11:56:07 ora legale Europa occidentale
+Versione 0.7.2-Alpha<br>
+Ultimo aggiornamento 2018-10-19 11:15:46 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
