--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.2-Alpha,</span>
+<span id="revnumber">versione 0.7.3-Alpha,</span>
 <span id="revdate">2018-10-19</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -580,6 +580,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN riempire.                 ---&gt; fill
   CAN riempire_con.             ---&gt; fill_with
   CAN rifare.                   ---&gt; 'again'
+  CAN ringraziamenti.           ---&gt; credits (+ acknowledgments, author, copyright)
   CAN riparare.                 ---&gt; fix (+ mend, repair)
   CAN rispondere.               ---&gt; answer (+ reply)
   CAN rompere.                  ---&gt; break        (+ destroy)
@@ -712,7 +713,6 @@ italiano del modulo delle definizioni.</p>
   CAN catch.
   CAN climb.
   CAN climb_on.
-  CAN credits.     -- (+ acknowledgments, author, copyright)
   CAN 'exit'.
 --CAN extinguish. ----------------&gt; ** VERBO ELIMINATO **  (+ put out, quench)
   CAN fire.
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.2-Alpha<br>
-Ultimo aggiornamento 2018-10-19 11:15:46 ora legale Europa occidentale
+Versione 0.7.3-Alpha<br>
+Ultimo aggiornamento 2018-10-19 17:32:41 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
