--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.3-Alpha,</span>
-<span id="revdate">2018-10-19</span>
+<span id="revnumber">versione 0.7.4-Alpha,</span>
+<span id="revdate">2018-10-21</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -565,6 +565,9 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN modalità_breve.           ---&gt; brief
   CAN modalità_lunga.           ---&gt; verbose
   CAN mostrare.                 ---&gt; 'show'       (+ reveal)
+  CAN notificare.               ---&gt; 'notify'
+  CAN notificare_off.           ---&gt; notify_off
+  CAN notificare_on.            ---&gt; notify_on
   CAN nuotare.                  ---&gt; swim
   CAN nuotare_in.               ---&gt; swim_in
   CAN parlare.                  ---&gt; talk
@@ -727,9 +730,6 @@ italiano del modulo delle definizioni.</p>
   CAN lift.
 --CAN light. ---------------------&gt; ** VERBO ELIMINATO ** (+ lit)
 --CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
-  CAN 'notify'.
-  CAN notify_on.
-  CAN notify_off.
   CAN pry.
   CAN pry_with.
   CAN put.         -- (+ lay, place)
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.3-Alpha<br>
-Ultimo aggiornamento 2018-10-19 17:32:41 ora legale Europa occidentale
+Versione 0.7.4-Alpha<br>
+Ultimo aggiornamento 2018-10-21 12:39:05 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
