Translate Notify Verbs
Translate meta verbs of the notify group:

- `notify`     to `notifica`
- `notify_on`  to `notifica_on`
- `notify_off` to `notifica_off`

Add verb responses:

- `notifica_attivata`
- `notifica_disattivata`

Translate `blocco_definizioni` attributes relating to `notify` verb:

- `notify_turned_on` to `notifiche_attive`
- `seen_notify`      to `visto_notifica`
- `oldscore`         to `ultimo_punteggio`

Translate Event:

- `check_score` to `controlla_punteggio`

Add tests for notify verbs and scores.

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.6-Alpha,</span>
+<span id="revnumber">versione 0.7.7-Alpha,</span>
 <span id="revdate">2018-10-21</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -607,6 +607,33 @@ Altresì noti come <em>comandi extradiegetici</em>.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>modalità_lunga</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">verbose</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">modalità lunga</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>notifica</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">notifica</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>notifica_off</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">notifica off</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">notifica disattivata</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>notifica_on</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">notifica on</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">notifica attivata</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
@@ -1754,13 +1781,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>notify (on, off)</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">notify. notify on. notify off</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>pour</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">(= defined at the verb <code>empty</code>)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">pour (obj)</p></td>
@@ -2046,8 +2066,8 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.6-Alpha<br>
-Ultimo aggiornamento 2018-10-21 12:39:05 ora legale Europa occidentale
+Versione 0.7.7-Alpha<br>
+Ultimo aggiornamento 2018-10-21 20:40:29 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
