Rename Verbs `dici_*`
Rename verbs:

- `dici_No` to `rispondi_No`
- `dici_Sì` to `rispondi_Sì`

Rename attributes:

- `dire_no` to `rispondere_No`
- `dire_sì` to `rispondere_Sì`

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.5-Alpha,</span>
-<span id="revdate">2018-10-21</span>
+<span id="revnumber">versione 0.7.6-Alpha,</span>
+<span id="revdate">2018-10-22</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -531,8 +531,6 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN dare.                     ---&gt; give
   CAN dire.                     ---&gt; 'say'
   CAN dire_a.                   ---&gt; say_to
-  CAN dire_no.                  ---&gt; 'no'
-  CAN dire_sì.                  ---&gt; yes
   CAN domandare.                ---&gt; ask (+ enquire, inquire, interrogate)
   CAN domandare_chi_sono_io.    ---&gt; who_am_i
   CAN domandare_chi_è.          ---&gt; who_is
@@ -586,6 +584,8 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN ringraziamenti.           ---&gt; credits (+ acknowledgments, author, copyright)
   CAN riparare.                 ---&gt; fix (+ mend, repair)
   CAN rispondere.               ---&gt; answer (+ reply)
+  CAN rispondere_No.            ---&gt; 'no'
+  CAN rispondere_Sì.            ---&gt; yes
   CAN rompere.                  ---&gt; break        (+ destroy)
   CAN rompere_con.              ---&gt; break_with
   CAN salvare_partita.          ---&gt; save
@@ -778,8 +778,8 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.5-Alpha<br>
-Ultimo aggiornamento 2018-10-21 20:40:29 ora legale Europa occidentale
+Versione 0.7.6-Alpha<br>
+Ultimo aggiornamento 2018-10-22 10:32:33 ora legale Europa occidentale
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
