Translate Script Verbs
Translate meta verbs of the script group:

- `'script'`   to `trascrizione`
- `script_on`  to `trascrizione_on`
- `script_off` to `trascrizione_off`

And their restriction attributes:

- `'script'`   to `trascrivere`
- `script_on`  to `trascrivere_on`
- `script_off` to `trascrivere_off`

Add tests for script commands (failed: creates empty log files).
Also add tests for all other out-of-game commands -- in order to test
`carica_partita` verb, a `.sav` file had to be included in project.

`BUILD_DOCS.bat`: add `reproducible` attribute to disable last-updated
date in footer, so it prevents Git seeing spurious changes every time the
script is run.

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.6-Alpha,</span>
+<span id="revnumber">versione 0.7.7-Alpha,</span>
 <span id="revdate">2018-10-22</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -613,6 +613,9 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN toccare.                  ---&gt; touch (+ feel)
   CAN toccare_con.              ---&gt; touch_with
   CAN togliersi_indumento.      ---&gt; remove
+  CAN trascrivere.              ---&gt; 'script'
+  CAN trascrivere_off.          ---&gt; script_off
+  CAN trascrivere_on.           ---&gt; script_on
   CAN trovare.                  ---&gt; find         (+ locate)
   CAN tuffarsi.                 ---&gt; dive
   CAN tuffarsi_in.              ---&gt; dive_in
@@ -742,9 +745,6 @@ italiano del modulo delle definizioni.</p>
   CAN put_under.
   CAN rub.
   CAN 'score'.
-  CAN 'script'.
-  CAN script_on.
-  CAN script_off.
   CAN search.
   CAN shake.
   CAN shoot.       -- (at)
@@ -778,8 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.6-Alpha<br>
-Ultimo aggiornamento 2018-10-22 10:32:33 ora legale Europa occidentale
+Versione 0.7.7-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
