--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.7-Alpha,</span>
-<span id="revdate">2018-10-22</span>
+<span id="revnumber">versione 0.7.8-Alpha,</span>
+<span id="revdate">2018-10-24</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -623,6 +623,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN uccidere_con.             ---&gt; kill_with
   CAN usare.                    ---&gt; 'use'
   CAN usare_con.                ---&gt; use_with
+  CAN vedere_punteggio.         ---&gt; 'score'
   CAN vendere.                  ---&gt; sell
   CAN versare.                  ---&gt; pour
   CAN versare_in.               ---&gt; pour_in
@@ -744,7 +745,6 @@ italiano del modulo delle definizioni.</p>
   CAN put_on.
   CAN put_under.
   CAN rub.
-  CAN 'score'.
   CAN search.
   CAN shake.
   CAN shoot.       -- (at)
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.7-Alpha<br>
+Versione 0.7.8-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
